<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.campuspin.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="266dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/search"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:onClick="search"
        android:text="@string/button_send"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageToUpload"
        android:layout_width="0dp"
        android:layout_height="278dp"
        android:onClick="chooseImage"
        android:contentDescription="Click To upload image"
        app:srcCompat="?attr/colorControlHighlight"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/bUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchByPhoto"
        android:text="@string/button_send2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/imageToUpload"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.801" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:onClick="openSignInActivity"
        android:text="@string/button_signIn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/button_signIn"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="28dp"
        android:text="TextView"
        android:layout_marginStart="40dp"
        tools:layout_editor_absoluteY="134dp"
        tools:layout_editor_absoluteX="31dp" />


</android.support.constraint.ConstraintLayout>
